fav-books 섹션 마크업, CSS, JS (탭 메뉴 관련) / fav.json데이터 books.json 파일로 이동

--- a/index.html
+++ b/index.html
@@ -99,17 +99,11 @@
               <p class="books-section-each-title">지금 서점 베스트 셀러</p>
               <div class="book-list-wrapper">
                 <div>
-                  <div
-                    class="each-book-each"
-                    style="background-image: url()"
-                  ></div>
+                  <div class="each-book-each"></div>
                   <div class="a-book-info"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-free-book each-book-each"
-                    style="background-image: url()"
-                  >
+                  <div class="each-free-book each-book-each">
                     <img
                       class="free-icon"
                       src="../img/무료.png"
@@ -119,17 +113,11 @@
                   <div class="a-book-info"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-book-each"
-                    style="background-image: url()"
-                  ></div>
+                  <div class="each-book-each"></div>
                   <div class="a-book-info"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-read-headset-book each-book-each"
-                    style="background-image: url()"
-                  >
+                  <div class="each-read-headset-book each-book-each">
                     <img
                       class="headset-icon"
                       src="../img/헤드셋.png"
@@ -145,7 +133,7 @@
                   <div class="a-book-info"></div>
                 </div>
                 <div>
-                  <div class="each-book-each" style="background-image: url()">
+                  <div class="each-book-each">
                     <img
                       class="headset-icon"
                       src="../img/헤드셋.png"
@@ -161,7 +149,7 @@
                   <div class="a-book-info"></div>
                 </div>
                 <div>
-                  <div class="each-book-each" style="background-image: url()">
+                  <div class="each-book-each">
                     <img
                       class="headset-icon"
                       src="../img/헤드셋.png"
@@ -177,10 +165,7 @@
                   <div class="a-book-info"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-read-headset-book each-book-each"
-                    style="background-image: url()"
-                  ></div>
+                  <div class="each-read-headset-book each-book-each"></div>
                   <div class="a-book-info"></div>
                 </div>
               </div>
@@ -189,17 +174,11 @@
               <p class="books-section-each-title">한 달 이내 출간된 책</p>
               <div class="book-list-wrapper">
                 <div>
-                  <div
-                    class="each-book-each-month"
-                    style="background-image: url()"
-                  ></div>
+                  <div class="each-book-each-month"></div>
                   <div class="a-book-info-month"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-free-book each-book-each-month"
-                    style="background-image: url()"
-                  >
+                  <div class="each-free-book each-book-each-month">
                     <img
                       class="free-icon"
                       src="../img/무료.png"
@@ -209,37 +188,26 @@
                   <div class="a-book-info-month"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-book-each-month"
-                    style="background-image: url()"
-                  ></div>
+                  <div class="each-book-each-month"></div>
                   <div class="a-book-info-month"></div>
                 </div>
                 <div>
                   <div
                     class="each-read-headset-book each-book-each-month"
-                    style="background-image: url()"
                   ></div>
                   <div class="a-book-info-month"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-book-each-month"
-                    style="background-image: url()"
-                  ></div>
+                  <div class="each-book-each-month"></div>
                   <div class="a-book-info-month"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-book-each-month"
-                    style="background-image: url()"
-                  ></div>
+                  <div class="each-book-each-month"></div>
                   <div class="a-book-info-month"></div>
                 </div>
                 <div>
                   <div
                     class="each-read-headset-book each-book-each-month"
-                    style="background-image: url()"
                   ></div>
                   <div class="a-book-info-month"></div>
                 </div>
@@ -249,10 +217,7 @@
               <p class="books-section-each-title">오디오북 BEST</p>
               <div class="book-list-wrapper">
                 <div>
-                  <div
-                    class="each-book-each-audiobest"
-                    style="background-image: url()"
-                  >
+                  <div class="each-book-each-audiobest">
                     <img
                       class="headset-icon"
                       src="../img/헤드셋.png"
@@ -268,10 +233,7 @@
                   <div class="a-book-info-audiobook"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-free-book each-book-each-audiobest"
-                    style="background-image: url()"
-                  >
+                  <div class="each-free-book each-book-each-audiobest">
                     <img
                       class="headset-icon"
                       src="../img/헤드셋.png"
@@ -287,10 +249,7 @@
                   <div class="a-book-info-audiobook"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-book-each-audiobest"
-                    style="background-image: url()"
-                  >
+                  <div class="each-book-each-audiobest">
                     <img
                       class="headset-icon"
                       src="../img/헤드셋.png"
@@ -306,10 +265,7 @@
                   <div class="a-book-info-audiobook"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-read-headset-book each-book-each-audiobest"
-                    style="background-image: url()"
-                  >
+                  <div class="each-read-headset-book each-book-each-audiobest">
                     <img
                       class="headset-icon"
                       src="../img/헤드셋.png"
@@ -325,10 +281,7 @@
                   <div class="a-book-info-audiobook"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-book-each-audiobest"
-                    style="background-image: url()"
-                  >
+                  <div class="each-book-each-audiobest">
                     <img
                       class="headset-icon"
                       src="../img/헤드셋.png"
@@ -344,10 +297,7 @@
                   <div class="a-book-info-audiobook"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-book-each-audiobest"
-                    style="background-image: url()"
-                  >
+                  <div class="each-book-each-audiobest">
                     <img
                       class="headset-icon"
                       src="../img/헤드셋.png"
@@ -363,10 +313,7 @@
                   <div class="a-book-info-audiobook"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-read-headset-book each-book-each-audiobest"
-                    style="background-image: url()"
-                  >
+                  <div class="each-read-headset-book each-book-each-audiobest">
                     <img
                       class="headset-icon"
                       src="../img/헤드셋.png"
@@ -387,51 +334,34 @@
               <p class="books-section-each-title">밀리 독점 오리지널 로맨스</p>
               <div class="book-list-wrapper">
                 <div>
-                  <div
-                    class="each-book-each-original"
-                    style="background-image: url()"
-                  ></div>
+                  <div class="each-book-each-original"></div>
                   <div class="a-book-info-original"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-free-book each-book-each-original"
-                    style="background-image: url()"
-                  ></div>
+                  <div class="each-free-book each-book-each-original"></div>
                   <div class="a-book-info-original"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-book-each-original"
-                    style="background-image: url()"
-                  ></div>
+                  <div class="each-book-each-original"></div>
                   <div class="a-book-info-original"></div>
                 </div>
                 <div>
                   <div
                     class="each-read-headset-book each-book-each-original"
-                    style="background-image: url()"
                   ></div>
                   <div class="a-book-info-original"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-book-each-original"
-                    style="background-image: url()"
-                  ></div>
+                  <div class="each-book-each-original"></div>
                   <div class="a-book-info-original"></div>
                 </div>
                 <div>
-                  <div
-                    class="each-book-each-original"
-                    style="background-image: url()"
-                  ></div>
+                  <div class="each-book-each-original"></div>
                   <div class="a-book-info-original"></div>
                 </div>
                 <div>
                   <div
                     class="each-read-headset-book each-book-each-original"
-                    style="background-image: url()"
                   ></div>
                   <div class="a-book-info-original"></div>
                 </div>
@@ -446,9 +376,197 @@
             <p>관심 분야에 있는 책도 <br />딱 골라드려요</p>
             <p>검색어 순위를 통해 뽑은 <br />인기 분야 책들을 확인해보세요</p>
           </div>
+          <div class="tab-content">
+            <input type="radio" id="tab1" name="tab-menu" checked />
+            <label for="tab1">주식</label>
+            <input type="radio" id="tab2" name="tab-menu" />
+            <label for="tab2">영어</label>
+            <input type="radio" id="tab3" name="tab-menu" />
+            <label for="tab3">고전</label>
+            <input type="radio" id="tab4" name="tab-menu" />
+            <label for="tab4">인테리어</label>
+            <input type="radio" id="tab5" name="tab-menu" />
+            <label for="tab5">다이어트</label>
+
+            <div class="conbox con1">
+              <div class="nth-list">
+                <div class="book-list-wrapper">
+                  <div>
+                    <div class="each-book-each stock"></div>
+                    <div class="first-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each stock"></div>
+                    <div class="first-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each stock"></div>
+                    <div class="first-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each stock"></div>
+                    <div class="first-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each stock"></div>
+                    <div class="first-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each stock"></div>
+                    <div class="first-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each stock"></div>
+                    <div class="first-info"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="conbox con2">
+              <div class="nth-list">
+                <div class="book-list-wrapper">
+                  <div>
+                    <div class="each-book-each english"></div>
+                    <div class="second-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each english"></div>
+                    <div class="second-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each english"></div>
+                    <div class="second-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each english"></div>
+                    <div class="second-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each english"></div>
+                    <div class="second-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each english"></div>
+                    <div class="second-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each english"></div>
+                    <div class="second-info"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="conbox con3">
+              <div class="nth-list">
+                <div class="book-list-wrapper">
+                  <div>
+                    <div class="each-book-each classic"></div>
+                    <div class="third-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each classic"></div>
+                    <div class="third-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each classic"></div>
+                    <div class="third-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each classic"></div>
+                    <div class="third-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each classic"></div>
+                    <div class="third-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each classic"></div>
+                    <div class="third-info"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="conbox con4">
+              <div class="nth-list">
+                <div class="book-list-wrapper">
+                  <div>
+                    <div class="each-book-each interior"></div>
+                    <div class="fourth-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each interior"></div>
+                    <div class="fourth-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each interior"></div>
+                    <div class="fourth-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each interior"></div>
+                    <div class="fourth-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each interior"></div>
+                    <div class="fourth-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each interior"></div>
+                    <div class="fourth-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each interior"></div>
+                    <div class="fourth-info"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="conbox con5">
+              <div class="nth-list">
+                <div class="book-list-wrapper">
+                  <div>
+                    <div class="each-book-each diet"></div>
+                    <div class="fifth-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each diet"></div>
+                    <div class="fifth-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each diet"></div>
+                    <div class="fifth-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each diet"></div>
+                    <div class="fifth-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each diet"></div>
+                    <div class="fifth-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each diet"></div>
+                    <div class="fifth-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each diet"></div>
+                    <div class="fifth-info"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
         <!-- completed section -->
-        <section class="completed"></section>
+        <section class="completed">
+          <h2 class="sr-only">완독지수</h2>
+          <div class="share-p">
+            <p>당신이 끝까지 읽을 책을 <br />알려주는 완독지수</p>
+            <p>
+              350만 밀리 회원이 먼저 읽고 <br />
+              다 읽을 확률과 예상 시간을 알려드려요
+            </p>
+          </div>
+        </section>
         <!-- price section -->
         <section class="price"></section>
       </main>
