--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
       crossorigin="anonymous"
     ></script>
+    <!-- AOS.js CDN -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Custom CSS and JS -->
     <link rel="stylesheet" href="css/font.css" type="text/css" />
     <link rel="stylesheet" href="css/custom.reset.css" type="text/css" />
@@ -43,11 +46,16 @@
             <div class="main-words">
               <img
                 class="welcome-main-ment"
+                data-aos="fade-up"
+                data-aos-duration="2000"
                 src="img/메인멘트.png"
                 alt="당신의 일상을 1밀리+ 독서와 무제한 친해지리"
               />
               <img
                 class="welcome-main-millie"
+                data-aos="fade-up"
+                data-aos-duration="3000"
+                data-aos-delay="600"
                 src="img/밀리의서재.png"
                 alt="밀리의서재 글씨"
               />
@@ -61,8 +69,14 @@
         <section class="slide">
           <h2 class="sr-only">수많은 도서 목록</h2>
           <div class="share-p">
-            <p>당신을 기다리는 <br />12만권의 도서</p>
-            <p class="slide-share-p-second">
+            <p data-aos="fade-up" data-aos-duration="2300">
+              당신을 기다리는 <br />12만권의 도서
+            </p>
+            <p
+              class="slide-share-p-second"
+              data-aos="fade-up"
+              data-aos-duration="3000"
+            >
               첫 달 무료 구독을 통해 <br />
               어떤 도서가 있는지 확인해보세요
             </p>
@@ -79,8 +93,14 @@
         <section class="ad">
           <h2 class="sr-only">밀리의서재 광고 영상</h2>
           <div class="share-p">
-            <p>오디오 드라마로 만나는 <br />베스트셀러</p>
-            <p class="slide-share-p-second">
+            <p data-aos="fade-up" data-aos-duration="2300">
+              오디오 드라마로 만나는 <br />베스트셀러
+            </p>
+            <p
+              class="slide-share-p-second"
+              data-aos="fade-up"
+              data-aos-duration="3000"
+            >
               휴남동 서점의 따듯한 이야기를 <br />
               일상에서 더 가깝게
             </p>
@@ -91,8 +111,12 @@
         <section class="books">
           <h2 class="sr-only">책 정보</h2>
           <div class="share-p">
-            <p>싹 다 무제한 <br />9,900원</p>
-            <p>10년치 베스트셀러 <br />신간 오디오북 장르 소설까지</p>
+            <p data-aos="fade-up" data-aos-duration="2300">
+              싹 다 무제한 <br />9,900원
+            </p>
+            <p data-aos="fade-up" data-aos-duration="3000">
+              10년치 베스트셀러 <br />신간 오디오북 장르 소설까지
+            </p>
           </div>
           <div class="list-gap">
             <div class="nth-list">
@@ -373,8 +397,12 @@
         <section class="fav-books">
           <h2 class="sr-only">관심 분야별 책</h2>
           <div class="share-p">
-            <p>관심 분야에 있는 책도 <br />딱 골라드려요</p>
-            <p>검색어 순위를 통해 뽑은 <br />인기 분야 책들을 확인해보세요</p>
+            <p data-aos="fade-up" data-aos-duration="2300">
+              관심 분야에 있는 책도 <br />딱 골라드려요
+            </p>
+            <p data-aos="fade-up" data-aos-duration="3000">
+              검색어 순위를 통해 뽑은 <br />인기 분야 책들을 확인해보세요
+            </p>
           </div>
           <div class="tab-content">
             <input type="radio" id="tab1" name="tab-menu" checked />
@@ -560,8 +588,10 @@
         <section class="completed">
           <h2 class="sr-only">완독지수</h2>
           <div class="share-p">
-            <p>당신이 끝까지 읽을 책을 <br />알려주는 완독지수</p>
-            <p>
+            <p data-aos="fade-up" data-aos-duration="2300">
+              당신이 끝까지 읽을 책을 <br />알려주는 완독지수
+            </p>
+            <p data-aos="fade-up" data-aos-duration="3000">
               350만 밀리 회원이 먼저 읽고 <br />
               다 읽을 확률과 예상 시간을 알려드려요
             </p>
@@ -573,5 +603,8 @@
       <!-- Footer -->
       <footer></footer>
     </div>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
