json 데이터 수정, main.js 파일 함수 생성으로 코드 중복 제거, completed 섹션 html과 css 작업

--- a/index.html
+++ b/index.html
@@ -432,7 +432,9 @@
                     <div class="first-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each stock"></div>
+                    <div class="each-book-each stock">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="first-info"></div>
                   </div>
                   <div>
@@ -444,7 +446,9 @@
                     <div class="first-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each stock"></div>
+                    <div class="each-book-each stock">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="first-info"></div>
                   </div>
                 </div>
@@ -462,15 +466,21 @@
                     <div class="second-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each english"></div>
+                    <div class="each-book-each english">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="second-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each english"></div>
+                    <div class="each-book-each english">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="second-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each english"></div>
+                    <div class="each-book-each english">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="second-info"></div>
                   </div>
                   <div>
@@ -518,31 +528,45 @@
               <div class="nth-list">
                 <div class="book-list-wrapper">
                   <div>
-                    <div class="each-book-each interior"></div>
+                    <div class="each-book-each interior">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="fourth-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each interior"></div>
+                    <div class="each-book-each interior">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="fourth-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each interior"></div>
+                    <div class="each-book-each interior">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="fourth-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each interior"></div>
+                    <div class="each-book-each interior">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="fourth-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each interior"></div>
+                    <div class="each-book-each interior">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="fourth-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each interior"></div>
+                    <div class="each-book-each interior">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="fourth-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each interior"></div>
+                    <div class="each-book-each interior">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="fourth-info"></div>
                   </div>
                 </div>
@@ -556,7 +580,15 @@
                     <div class="fifth-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each diet"></div>
+                    <div class="each-book-each diet">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
+                    <div class="fifth-info"></div>
+                  </div>
+                  <div>
+                    <div class="each-book-each diet">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="fifth-info"></div>
                   </div>
                   <div>
@@ -564,15 +596,15 @@
                     <div class="fifth-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each diet"></div>
+                    <div class="each-book-each diet">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="fifth-info"></div>
                   </div>
                   <div>
-                    <div class="each-book-each diet"></div>
-                    <div class="fifth-info"></div>
-                  </div>
-                  <div>
-                    <div class="each-book-each diet"></div>
+                    <div class="each-book-each diet">
+                      <img class="pdf-icon" src="./img/PDF.png" alt="" />
+                    </div>
                     <div class="fifth-info"></div>
                   </div>
                   <div>
@@ -595,6 +627,32 @@
               350만 밀리 회원이 먼저 읽고 <br />
               다 읽을 확률과 예상 시간을 알려드려요
             </p>
+          </div>
+          <div class="completed-wrapper">
+            <div class="completed-bg-center">
+              <img
+                class="reading-average"
+                src="./img/완독지수-평균대비.png"
+                alt="평균대비 완독지수"
+              />
+              <div class="reading-mock-wrapper">
+                <img
+                  class="reading-mock"
+                  src="./img/완독지수-mock.png"
+                  alt="완독지수 mock"
+                />
+              </div>
+            </div>
+            <div class="how-read">
+              <div class="how-read-first-wrapper">
+                <img src="./img/마니아.png" alt="마니아 카드" />
+                <img src="./img/밀리픽.png" alt="밀리픽 카드" />
+              </div>
+              <div class="how-read-second-wrapper">
+                <img src="./img/홀릭.png" alt="홀릭 카드" />
+                <img src="./img/히든.png" alt="히든 카드" />
+              </div>
+            </div>
           </div>
         </section>
         <!-- price section -->
