--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <div class="each-free-book each-book-each">
                     <img
                       class="free-icon"
-                      src="../img/무료.png"
+                      src="./img/무료.png"
                       alt="무료 모양 아이콘 이미지"
                     />
                   </div>
@@ -144,12 +144,12 @@
                   <div class="each-read-headset-book each-book-each">
                     <img
                       class="headset-icon"
-                      src="../img/헤드셋.png"
+                      src="./img/헤드셋.png"
                       alt="헤드셋 모양 아이콘 이미지"
                     />
                     <img
                       class="completely-icon"
-                      src="../img/완독.png"
+                      src="./img/완독.png"
                       alt="완독 모양 아이콘 이미지"
                     />
                   </div>
@@ -160,12 +160,12 @@
                   <div class="each-book-each">
                     <img
                       class="headset-icon"
-                      src="../img/헤드셋.png"
+                      src="./img/헤드셋.png"
                       alt="헤드셋 모양 아이콘 이미지"
                     />
                     <img
                       class="completely-icon"
-                      src="../img/완독.png"
+                      src="./img/완독.png"
                       alt="완독 모양 아이콘 이미지"
                     />
                   </div>
@@ -176,12 +176,12 @@
                   <div class="each-book-each">
                     <img
                       class="headset-icon"
-                      src="../img/헤드셋.png"
+                      src="./img/헤드셋.png"
                       alt="헤드셋 모양 아이콘 이미지"
                     />
                     <img
                       class="completely-icon"
-                      src="../img/완독.png"
+                      src="./img/완독.png"
                       alt="완독 모양 아이콘 이미지"
                     />
                   </div>
@@ -205,7 +205,7 @@
                   <div class="each-free-book each-book-each-month">
                     <img
                       class="free-icon"
-                      src="../img/무료.png"
+                      src="./img/무료.png"
                       alt="무료 모양 아이콘 이미지"
                     />
                   </div>
@@ -244,12 +244,12 @@
                   <div class="each-book-each-audiobest">
                     <img
                       class="headset-icon"
-                      src="../img/헤드셋.png"
+                      src="./img/헤드셋.png"
                       alt="헤드셋 모양 아이콘 이미지"
                     />
                     <img
                       class="completely-icon"
-                      src="../img/완독.png"
+                      src="./img/완독.png"
                       alt="완독 모양 아이콘 이미지"
                     />
                   </div>
@@ -260,12 +260,12 @@
                   <div class="each-free-book each-book-each-audiobest">
                     <img
                       class="headset-icon"
-                      src="../img/헤드셋.png"
+                      src="./img/헤드셋.png"
                       alt="헤드셋 모양 아이콘 이미지"
                     />
                     <img
                       class="completely-icon"
-                      src="../img/완독.png"
+                      src="./img/완독.png"
                       alt="완독 모양 아이콘 이미지"
                     />
                   </div>
@@ -276,12 +276,12 @@
                   <div class="each-book-each-audiobest">
                     <img
                       class="headset-icon"
-                      src="../img/헤드셋.png"
+                      src="./img/헤드셋.png"
                       alt="헤드셋 모양 아이콘 이미지"
                     />
                     <img
                       class="completely-icon"
-                      src="../img/완독.png"
+                      src="./img/완독.png"
                       alt="완독 모양 아이콘 이미지"
                     />
                   </div>
@@ -292,12 +292,12 @@
                   <div class="each-read-headset-book each-book-each-audiobest">
                     <img
                       class="headset-icon"
-                      src="../img/헤드셋.png"
+                      src="./img/헤드셋.png"
                       alt="헤드셋 모양 아이콘 이미지"
                     />
                     <img
                       class="completely-icon"
-                      src="../img/완독.png"
+                      src="./img/완독.png"
                       alt="완독 모양 아이콘 이미지"
                     />
                   </div>
@@ -308,12 +308,12 @@
                   <div class="each-book-each-audiobest">
                     <img
                       class="headset-icon"
-                      src="../img/헤드셋.png"
+                      src="./img/헤드셋.png"
                       alt="헤드셋 모양 아이콘 이미지"
                     />
                     <img
                       class="completely-icon"
-                      src="../img/완독.png"
+                      src="./img/완독.png"
                       alt="완독 모양 아이콘 이미지"
                     />
                   </div>
@@ -324,12 +324,12 @@
                   <div class="each-book-each-audiobest">
                     <img
                       class="headset-icon"
-                      src="../img/헤드셋.png"
+                      src="./img/헤드셋.png"
                       alt="헤드셋 모양 아이콘 이미지"
                     />
                     <img
                       class="summary-icon"
-                      src="../img/요약.png"
+                      src="./img/요약.png"
                       alt="요약 모양 아이콘 이미지"
                     />
                   </div>
@@ -340,12 +340,12 @@
                   <div class="each-read-headset-book each-book-each-audiobest">
                     <img
                       class="headset-icon"
-                      src="../img/헤드셋.png"
+                      src="./img/헤드셋.png"
                       alt="헤드셋 모양 아이콘 이미지"
                     />
                     <img
                       class="completely-icon"
-                      src="../img/완독.png"
+                      src="./img/완독.png"
                       alt="완독 모양 아이콘 이미지"
                     />
                   </div>
