price 섹션 마크업, css / example 섹션 마크업 / custom.reset color 추가

--- a/index.html
+++ b/index.html
@@ -656,7 +656,110 @@
           </div>
         </section>
         <!-- price section -->
-        <section class="price"></section>
+        <section class="price">
+          <h2 class="sr-only">정기구독</h2>
+          <div class="share-p">
+            <p data-aos="fade-up" data-aos-duration="2300">
+              언제든 해지 가능! <br />첫 달 무료로 가볍게
+            </p>
+            <p data-aos="fade-up" data-aos-duration="3000">
+              상황에 맞게 원하는 요금제를 <br />
+              자유롭게 선택하세요
+            </p>
+          </div>
+          <div class="price-info-wrapper">
+            <div class="e-book">
+              <p class="book-title">전자책 정기구독</p>
+              <div class="month-price">
+                <span class="month">월</span>
+                <strong class="real-price">9,900</strong>
+                <span class="won">원</span>
+              </div>
+              <div class="discount">
+                <del class="del-price">118,800</del>
+                <img
+                  class="discount-img"
+                  src="./img/discount1.png"
+                  alt="16.6% 할인 이미지"
+                />
+              </div>
+              <div class="year-price">
+                <span class="year">연</span>
+                <strong class="real-price">99,900</strong>
+                <span class="won">원</span>
+              </div>
+              <div class="catchphrase">
+                <p class="price-p">밀리에서 제공하는 콘텐츠를 무제한으로</p>
+              </div>
+            </div>
+            <div class="paper-book">
+              <p class="book-title">종이책 정기구독</p>
+              <div class="month-price">
+                <span class="month">월</span>
+                <strong class="real-price">15,900</strong>
+                <span class="won">원</span>
+              </div>
+              <div class="discount">
+                <del class="del-price">202,800</del>
+                <img
+                  class="discount-img"
+                  src="./img/discount2.png"
+                  alt="9.7% 할인 이미지"
+                />
+              </div>
+              <div class="year-price">
+                <span class="year">연</span>
+                <strong class="real-price">183,000</strong>
+                <span class="won">원</span>
+              </div>
+              <div class="catchphrase">
+                <p class="price-p">
+                  밀리의 모든 콘텐츠를 무제한으로 보고 <br />2달에 1번
+                  종이책+전자책 배송까지
+                </p>
+              </div>
+            </div>
+            <div class="important-price-info">
+              <div class="no-amount-charged">
+                <img
+                  class="price-info-img"
+                  src="./img/가격-티켓.png"
+                  alt="무료 체험 기간"
+                />
+                <p>무료 체험 기간 동안 해지해도 <br />금액이 청구되지 않아요</p>
+              </div>
+              <hr class="price-info-divide-line" />
+              <div class="an-immediate-refund">
+                <img
+                  class="price-info-img"
+                  src="./img/가격-돈.png"
+                  alt="즉시 환불"
+                />
+                <p>
+                  유료 결제되어도 사용 이력이 <br />없으면 즉시 환불해드려요
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- example section -->
+        <section class="example">
+          <div class="example-tab">
+            <input type="radio" name="ex-tabmenu" id="ex-tab1" />
+            <label for="ex-tab1">
+              <img src="./img/audiobook.png" alt="헤드셋 아이콘" />
+              <p>오디오북</p>
+            </label>
+            <input type="radio" name="ex-tabmenu" id="ex-tab2" />
+            <label for="ex-tab2">
+              <img src="./img/viewer.png" alt="뷰어 아이콘" />
+              <p>밀리 뷰어</p>
+            </label>
+
+            <div class="ex-conbox ex-con1"></div>
+            <div class="ex-conbox ex-con2"></div>
+          </div>
+        </section>
       </main>
       <!-- Footer -->
       <footer></footer>
